// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`StatefulComponent Snapshot StatefulComponent component 1`] = `
<View>
  <Text>
    Empty area
  </Text>
  <Text>
    No data found.
  </Text>
</View>
`;

exports[`StatefulComponent Snapshot StatefulComponent component with child 1`] = `
<View>
  <Text>
    Empty area
  </Text>
  <Text>
    No data found.
  </Text>
</View>
`;

exports[`StatefulComponent Snapshot StatefulComponent component with child, isEmpty: () => true 1`] = `
<View>
  <Text>
    Something broke!
  </Text>
  <Text>
    An unknown error has occured. Please try again later.
  </Text>
</View>
`;

exports[`StatefulComponent Snapshot StatefulComponent component with child, loading: true 1`] = `
<View>
  <Text>
    Something broke!
  </Text>
  <Text>
    An unknown error has occured. Please try again later.
  </Text>
</View>
`;
